# llm-datatalkclub-zoomcamp

./: .gitignore  README.md  agent_helper.py  docker-compose.yml  evaluation_utils.py  ingest.py  llm_modules_notes.ipynb  pyproject.toml  rag_helper.py
flows/: 3_rag_with_websearch.yaml  4_simple_agent.yaml
module_1/: 11_agents.ipynb  3_what_is_rag.ipynb  4_dataset.ipynb  5_search.ipynb  6_building_prompt.ipynb  7_rag_pipeline.ipynb  8_rag_helper_minisearch_small_context.ipynb  9_data_ingest_sqlitesearch_save_in_db.ipynb  environment_setup.ipynb  homework_1.ipynb  llm_modules_notes.ipynb  rag_helper.py
module_2_vector_search/: 2_3_4_embedding_&_splitter_&_vectorsearch.ipynb  5_minsearch_vector.ipynb  6_rag_vectors_minsearch.ipynb  7_rag_with_sqlite_search.ipynb  8_rag_with_dbchrom.ipynb  9_onnx_embedder.ipynb  homework_2.ipynb  rag_with_PG_vector_for_large_dataset_and_index_search.ipynb
module_3_orchestration/: homework_3.ipynb  kestra.ipynb
module_4_evaluation/: 11_12_rag_and_agent.ipynb  13_llm_as_judge.ipynb  14_agent_evaluation.ipynb  1_introduction.ipynb  2_ground_truth.ipynb  3_ground_truth_batch.ipynb  4_search_evaluation.ipynb  5_search_metric.ipynb  6_search_parameter_tunig.ipynb  homework_4.ipynb
module_4_evaluation/data/: agent-evaluations.csv  agent_answers.csv  ground_truth_FAQ_data.csv  question_with_rag_and_human_answers_data.csv  rag_evaluations.csv
