[project]
package-mode = false

name = "llm-datatalkclub-zoomcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "SabaYahyaa"}
]
# requires-python = ">=3.12,<4.0"
[tool.poetry.dependencies]
python = ">=3.10"
langchain = "*"
langchain-ollama = "*"


dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "minsearch (>=0.1.0,<0.2.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "transformers (>=5.11.0,<6.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langchain (>=1.3.9,<2.0.0)",
    "sqlitesearch (>=0.1.0,<0.2.0)" 
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
